// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton should render 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 dnXLa"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a danger color 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 bkgfJc"
    color="danger"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a hint color 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 lpgLjl"
    color="hint"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a info color 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 icltPx"
    color="info"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a success color 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 dnXLa"
    color="success"
    type="radio"
  />
</div>
`;

exports[`RadioButton should render a warning color 1`] = `
<div>
  <input
    class="RadioButton-jdab1i-0 izMwjP"
    color="warning"
    type="radio"
  />
</div>
`;
